--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,11 @@
 			<version>6.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
