--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>com.creactiviti</groupId>
 	<artifactId>giraphe</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
 	<name>giraphe</name>
-	<description>Headless CMS</description>
+	<description>Spring Boot Starter CMS</description>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,6 +17,12 @@
 	</properties>
 
 	<dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -68,6 +76,5 @@
 			</plugin>
 	  </plugins>
 	</build>
-
 
 </project>
